# Klopotenko-Cookbook

./: .gitignore  CMakeLists.txt  README.md  createFileStructure.sh  main.cpp
Database/: CookbookDatabase.sql  Untitled.mwb
Database/separateTables/: cookbook_categories.sql  cookbook_dishes.sql  cookbook_ingredients.sql  cookbook_nationalities.sql  cookbook_recipe_details.sql  cookbook_recipe_ingredients.sql  cookbook_recipe_portions.sql  cookbook_recipes.sql
client/include/: client.h  client_json_parser.h  json_parser.h  network_client.h  qml_handler.h
client/include/qmlHandling/: breadcrumb_line.h  dropdownRecipeList.h  dropdown_recipe_list.h
client/src/: client.cpp  client_json_parser.cpp  json_parser.cpp  network_client.cpp  qml_handler.cpp
client/src/qmlHandling/: breadcrumb_line.cpp  dropdownRecipeList.cpp  dropdown_recipe_list.cpp
common/include/: json_parser.h  utility.h
common/src/: json_parser.cpp
database/include/: connection.h
icons/platform_specific/: cookbookMac.icns
qml/MainPage/: AddReceiptButton.qml  BreadCrumbNavigation.qml  CurrentRecipe.qml  DropdownButton.qml  FilterPanel.qml  Finder.qml  Header.qml  MainPage.qml
qml/MainPage/Header/: AddReceiptButton.qml  Header.qml
resources/: icons.qrc  qml.qrc
server/include/: database_handler.h  qml_service.h  request_handler.h  server.h  server_json_parser.h
server/src/: database_handler.cpp  request_handler.cpp  server.cpp  server_json_parser.cpp
src/: main.cpp
